trying to fix overflow

--- a/style.css
+++ b/style.css
@@ -33,16 +33,7 @@
 [data-inviewporttype="scale-out"].is-inViewport {
   transform: scale(1);
   opacity: 1;
-}
-
-[data-inviewporttype="fade-rotate"] {
-  transition: 2s;
-  opacity: 0;
-}
-
-[data-inviewporttype="fade-rotate"].is-inViewport {
-  transform: rotate(180deg);
-  opacity: 1;
+  position: static;
 }
 
 .source {
@@ -77,10 +68,6 @@ html {
 
 html, button, input, select, textarea {
   font-family: sans-serif;
-}
-
-body {
-  margin: 0;
 }
 
 a {
@@ -277,6 +264,8 @@ body {
   font-weight: 300;
   line-height: normal;
   overflow-x: hidden;
+  margin: 0;
+  max-width: 100vw;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -1955,11 +1944,11 @@ form input[type="submit"], form button, form input[type="reset"] {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  overflow: visible;
 }
 
 .badge-img {
   cursor: help;
-  overflow: hidden;
 }
 
 .long {
